week 2 - auto parts store and logo

--- a/index.htm
+++ b/index.htm
@@ -4,12 +4,28 @@
 <head>
   <meta charset="utf-8">
 
-  <title>HTML5 Template</title>
+  <title>Tillman Auto Parts</title>
   <meta name="description" content="HTML5 Template">
 
 </head>
 
 <body>
+<h1><em>Tillman Auto Parts</em></h1>
+<img src="images\logo.jpg" width = 100</img>
+<p><strong>Welcome to the best auto parts store on the web!</strong> <br>
+We have everything you need to repair your vehicle. <br>
+From A-Arms to wiper blades, we have every part for every vehicle. <br>
+We give AAA discounts for those customers who are members.<br>
+We stock all the lubricants and oil change products you will ever need.
+<p>
+<p><strong>ALL ACDELCO PRODUCTS 10% OFF - THIS WEEK ONLY!</strong></p>
+<p><strong>MOBILE 1 OIL PRODUCTS ON SALE THIS MONTH - INCLUDES A FREE FILTER WITH PURCHASE OF 10 QUARTS!</strong></p>
+<img src="images\autopartsstore.jpg" width = 500</img>
+
+
+
+
+
 
 </body>
 </html>
