--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
 
 <body>
 <h1><em>Tillman Auto Parts</em></h1>
-<img src="images\logo.jpg"  width = 100  alt=“picture of logo”</img>
+<img src="images\logo.jpg"  width = 100  alt="picture of logo"</img>
 <p><strong>Welcome to the best auto parts store on the web!</strong> <br>
 We have everything you need to repair your vehicle. <br>
 From A-Arms to wiper blades, we have every part for every vehicle. <br>
