--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
 
 <body>
 <h1><em>Tillman Auto Parts</em></h1>
-<img src="images\logo.jpg"img>
+<img src="images\logo.jpg"  width = 100  alt="picture of logo">
 <p><strong>Welcome to the best auto parts store on the web!</strong> <br>
 We have everything you need to repair your vehicle. <br>
 From A-Arms to wiper blades, we have every part for every vehicle. <br>
@@ -20,11 +20,7 @@ We stock all the lubricants and oil change products you will ever need.
 <p>
 <p><strong>ALL ACDELCO PRODUCTS 10% OFF - THIS WEEK ONLY!</strong></p>
 <p><strong>MOBILE 1 OIL PRODUCTS ON SALE THIS MONTH - INCLUDES A FREE FILTER WITH PURCHASE OF 10 QUARTS!</strong></p>
-<img src="images\autopartsstore.jpg" width = 500  alt="picture of store"</img>
-
-
-
-
+<img src="images\autopartsstore.jpg" width = 500  alt="picture of store">
 
 
 </body>
