--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <title>Tillman Auto Parts</title>
-  <meta name="description" content="HTML5 Template">
+  <meta name="description" content="Parts store">
 
 </head>
 
