--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
 
 <body>
 <h1><em>Tillman Auto Parts</em></h1>
-<img src="Images\logo.jpg"  width = 100  alt="picture of logo">
+<img src="images\logo.jpg"  width = 100  alt="picture of logo">
 <hr />
 <hr />
 <p><strong>Welcome to the best auto parts store on the web!</strong> <br>
@@ -22,7 +22,7 @@ We stock all the lubricants and oil change products you will ever need.
 <p>
 <p><strong>ALL ACDELCO PRODUCTS 10% OFF - THIS WEEK ONLY!</strong></p>
 <p><strong>MOBILE 1 OIL PRODUCTS ON SALE THIS MONTH - INCLUDES A FREE FILTER WITH PURCHASE OF 10 QUARTS!</strong></p>
-<img src="Images\autopartsstore.jpg" width = 500  alt="picture of store">
+<img src="images\autopartsstore.jpg" width = 500  alt="picture of store">
 
 
 </body>
