--- a/index.htm
+++ b/index.htm
@@ -22,8 +22,8 @@ We stock all the lubricants and oil change products you will ever need.
 <p>
 <p><strong>ALL ACDELCO PRODUCTS 10% OFF - THIS WEEK ONLY!</strong></p>
 <p><strong>MOBILE 1 OIL PRODUCTS ON SALE THIS MONTH - INCLUDES A FREE FILTER WITH PURCHASE OF 10 QUARTS!</strong></p>
-<a href="https://jktillman.github.io/oilfilters.htm">Oilfilters</a><br>
-<a href="https://jktillman.github.io/batts.htm">Batteries</a><br>
+<a href="https://jktillman.github.io/oilfilters.htm">Oilfilters</a><br><br>
+<a href="https://jktillman.github.io/batts.htm">Batteries</a><br><br>
 
 <img src="Images\autopartsstore.jpg" width = 500  alt="picture of store">
 
