--- a/batts.htm
+++ b/batts.htm
@@ -10,17 +10,19 @@
 </head>
 
 <body>
-<h1><em>Tillman Auto Parts</em></h1>
-<img src="Images\logo.jpg"  width = 100  alt="picture of logo">
+<h1><p style="text-align:center;"><em>Tillman Auto Parts</em></h1>
+<p style="text-align:center;"><img src="Images\logo.jpg"  width = 100  alt="picture of logo"></p>
 <hr />
 <hr />
-<a href="https://jktillman.github.io/">Home</a>
+<p style="text-align:center;"><a href="https://jktillman.github.io/">Home</a><p/>
 
-<h1>Batteries </h1>
+<h1><p style="text-align:center;">Batteries </h1>
+
+
 <table style="width:90%">
   
-  <table border="1" cellpadding="40" cellspacing="5" 
-  
+ <table border="1" cellpadding="40" cellspacing="5" 
+ 
   <tr>
 	<th>Crown </th>
 	<th>Energy</th>
@@ -56,6 +58,6 @@
 		<td><img src="Images\batt4.jpg"  width = 100  alt="picture of optima"></td>
 		<td><img src="Images\batt5.jpg"  width = 100  alt="picture of diehard"></td>
 		</tr>
-		
+		</p>
 </body>
 </html>
