--- a/oilfilters.htm
+++ b/oilfilters.htm
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-<h1><em>Tillman Auto Parts</em></h1>
-<img src="Images\logo.jpg"  width = 100  alt="picture of logo">
+<h1><p style="text-align:center;"><em>Tillman Auto Parts</em></h1>
+<p style="text-align:center;"><img src="Images\logo.jpg"  width = 100  alt="picture of logo"></p>
 <hr />
 <hr />
-<a href="https://jktillman.github.io/">Home</a>
+<p style="text-align:center;"><a href="https://jktillman.github.io/">Home</a>
 
-<h1>Oil Filters </h1>
+<h1><p style="text-align:center;">Oil Filters </h1>
 <table style="width:93%">
   
   <table border="1" cellpadding="40" cellspacing="5" 
