--- a/batts.htm
+++ b/batts.htm
@@ -21,7 +21,7 @@
 
 <table style="width:90%">
   
- <table border="1" cellpadding="40" cellspacing="5" 
+ <table border="1" align="center" cellpadding="40" cellspacing="5" 
  
   <tr>
 	<th>Crown </th>
