--- a/oilfilters.htm
+++ b/oilfilters.htm
@@ -19,7 +19,7 @@
 <h1><p style="text-align:center;">Oil Filters </h1>
 <table style="width:93%">
   
-  <table border="1" cellpadding="40" cellspacing="5" 
+  <table border="1" align="center" cellpadding="40" cellspacing="5" 
   
   <tr>
 	<th>Fram Racing </th>
