--- a/oilfilters.htm
+++ b/oilfilters.htm
@@ -11,7 +11,9 @@
 
 <body>
 <h1><p style="text-align:center;"><em>Tillman Auto Parts</em></h1>
-<p style="text-align:center;"><img src="Images\logo.jpg"  width = 100  alt="picture of logo"></p>
+<p style="text-align:center;"><img src="Images\logo.jpg"  style="width:50px; height:50px;"  alt="picture of logo"></p>
+    
+    </h1>
 <hr />
 <hr />
 <p style="text-align:center;"><a href="https://jktillman.github.io/">Home</a>
