--- a/contactus.htm
+++ b/contactus.htm
@@ -35,7 +35,7 @@
 	<label > Email address:<br><input type="text" name="email" 
 	size ="40" /> </label><br><br>
 	
-   <form action="">
+  
 	<p>
 	<p><p style="text-align:center;">
 		<select name ="Choose">
@@ -47,18 +47,18 @@
    <br>
 	<h4 style="text-align:center;">Please tell us how we can help you</h4>
 	<p>
-	<form action="">
+	
 		<p>
 		<p style="text-align:center;">
 		<textarea name="comments" rows="5" cols="40">
 		Type here...
 		</textarea>
-	</form>
-	<form action="">
+	</p>
 	<p>
 		<p style="text-align:center;">
-		<input type="submit" value="Submit Form"/>
-		<input type="reset" value="Reset Form"/>
+	
+		<input value="Submit Form" type="submit" />
+		<input value="Reset Form" type="reset" />
 	</p>
 	</form>	
 </body>
