added css sheet

--- a/batts.htm
+++ b/batts.htm
@@ -6,8 +6,10 @@
 
   <title>Tillman Auto Parts</title>
   <meta name="description" content="Parts store">
+ 
+ <link rel="stylesheet" href="my.css" type="text/css">
 
-</head>
+ </head>
 
 <body>
 <h1><p style="text-align:center;"><em>Tillman Auto Parts</em></h1>
@@ -19,9 +21,9 @@
 <h1><p style="text-align:center;">Batteries </h1>
 
 
-<table style="width:90%">
+<table>
   
- <table border="1" align="center" cellpadding="40" cellspacing="5" 
+
  
   <tr>
 	<th>Crown </th>
