--- a/contactus.htm
+++ b/contactus.htm
@@ -6,7 +6,8 @@
 
   <title>Tillman Auto Parts</title>
   <meta name="description" content="Parts store">
-
+     
+  <link rel="stylesheet" href="my.css" type="text/css">
 </head>
 
 <body>
