--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,8 @@
   <title>Tillman Auto Parts</title>
   <meta name="description" content="Parts store">
 
+  <link rel="stylesheet" href="my.css" type="text/css">
+  
 </head>
 
 <body>
@@ -18,12 +20,12 @@
 
 <p><p style="text-align:center;"><strong>Welcome to the best auto parts store on the web!</strong> <br>
 We have everything you need to repair your vehicle. <br>
-From A-Arms to wiper blades, we have every part for every vehicle. <br><br>
+From A-Arms to wiper blades, we have every part for your car or truck! <br><br>
 We give AAA discounts for those customers who are members.<br><br>
 We stock all the lubricants and oil change products you will ever need.
 <p>
 <p><p style="text-align:center;"><strong>ALL ACDELCO PRODUCTS 10% OFF - THIS WEEK ONLY!</strong></p>
-<p><p style="text-align:center;"><strong>MOBILE 1 OIL PRODUCTS ON SALE THIS MONTH - INCLUDES A FREE FILTER WITH PURCHASE OF 10 QUARTS!</strong></p>
+<p><p style="text-align:center;"><strong>MOBILE 1 OIL PRODUCTS ON SALE THIS MONTH - INCLUDES A FREE FILTER WITH PURCHASE OF 5 QUARTS!</strong></p>
 <p style="text-align:center;"><a href="https://jktillman.github.io/oilfilters.htm">Oilfilters</a>
 <p style="text-align:center;"><a href="https://jktillman.github.io/batts.htm">Batteries</a>
 <p style="text-align:center;"><a href="https://jktillman.github.io/contactus.htm">Contact us</a>
