--- a/oilfilters.htm
+++ b/oilfilters.htm
@@ -7,6 +7,8 @@
   <title>Tillman Auto Parts</title>
   <meta name="description" content="Parts store">
 
+  <link rel="stylesheet" href="my.css" type="text/css">
+  
 </head>
 
 <body>
@@ -18,10 +20,10 @@
 <hr />
 <p style="text-align:center;"><a href="https://jktillman.github.io/">Home</a>
 
-<h1><p style="text-align:center;">Oil Filters </h1>
-<table style="width:93%">
+<h1>Oil Filters </h1>
+<table>
   
-  <table border="1" align="center" cellpadding="40" cellspacing="5" 
+  
   
   <tr>
 	<th>Fram Racing </th>
@@ -58,6 +60,6 @@
 		<td><img src="Images\oilf4.jpg"  width = 100  alt="picture of Fram Ultra"></td>
 		<td><img src="Images\oilf5.jpg"  width = 100  alt="picture of Purol"></td>
 		</tr>
-		
+		</table>
 </body>
 </html>
