--- a/batts.htm
+++ b/batts.htm
@@ -12,19 +12,25 @@
  </head>
 
 <body>
+<div class="header">
 <h1><p style="text-align:center;"><em>Tillman Auto Parts</em></h1>
 <p style="text-align:center;"><img src="Images\logo.jpg"  style="width:50px; height:50px;"  alt="picture of logo"></p></h1>
 <hr />
 <hr />
-<p style="text-align:center;"><a href="https://jktillman.github.io/">Home</a><p/>
+</div>
+
+<div class="links">
+<a href="https://jktillman.github.io/">Home</a><br><br>
+<a href="https://jktillman.github.io/oilfilters.htm">Oilfilters</a><br><br>
+<a href="https://jktillman.github.io/contactus.htm">Contact Us</a>
+</div>
+
+<div class="tables">
 
 <h1><p style="text-align:center;">Batteries </h1>
 
-
 <table>
-  
-
- 
+   
   <tr>
 	<th>Crown </th>
 	<th>Energy</th>
@@ -60,6 +66,7 @@
 		<td><img src="Images\batt4.jpg"  width = 100  alt="picture of optima"></td>
 		<td><img src="Images\batt5.jpg"  width = 100  alt="picture of diehard"></td>
 		</tr>
-		</p>
-</body>
+		</table>
+</div>
+		</body>
 </html>
