--- a/contactus.htm
+++ b/contactus.htm
@@ -12,15 +12,20 @@
 
 <body>
 
+<div class="header">
 <h1><p style="text-align:center;"><em>Tillman Auto Parts</em></h1>
-<p style="text-align:center;"><img src="Images\logo.jpg"  style="width:50px; height:50px;"  alt="picture of logo"></p>
-    
-    </h1>
+<p style="text-align:center;"><img src="Images\logo.jpg"  style="width:50px; height:50px;"  alt="picture of logo"></p></h1>
 <hr />
 <hr />
-<p style="text-align:center;"><a href="https://jktillman.github.io/">Home</a><p/>
+</div>
+<div class="links">
+<a href="https://jktillman.github.io/">Home</a><br><br>
+<a href="https://jktillman.github.io/batts.htm">Batteries</a><br><br>
+<a href="https://jktillman.github.io/oilfilters.htm">Oilfilters</a>
+</div>
 
 
+<div class="maininfo">
 <h2 style="text-align:center;">Contact Us<h2></h2>
 
 
@@ -62,7 +67,9 @@
 		<input value="Reset Form" type="reset" />
 	</p>
 	</form>	
-</body>
+</div>
+	
+	</body>
 </html>
 
 
