--- a/index.htm
+++ b/index.htm
@@ -12,26 +12,36 @@
 </head>
 
 <body>
-
+<body>
+<div class="header">
 <h1><p style="text-align:center;"><em>Tillman Auto Parts</em></h1>
 <p style="text-align:center;"><img src="Images\logo.jpg"  style="width:50px; height:50px;"  alt="picture of logo"></p></h1>
 <hr />
 <hr />
+</div>
 
-<p><p style="text-align:center;"><strong>Welcome to the best auto parts store on the web!</strong> <br>
+
+<div class="maininfo">
+<p style="text-align:center;"><strong>Welcome to the best auto parts store on the web!</strong> <br>
 We have everything you need to repair your vehicle. <br>
 From A-Arms to wiper blades, we have every part for your car or truck! <br><br>
 We give AAA discounts for those customers who are members.<br><br>
 We stock all the lubricants and oil change products you will ever need.
-<p>
-<p><p style="text-align:center;"><strong>ALL ACDELCO PRODUCTS 10% OFF - THIS WEEK ONLY!</strong></p>
-<p><p style="text-align:center;"><strong>MOBILE 1 OIL PRODUCTS ON SALE THIS MONTH - INCLUDES A FREE FILTER WITH PURCHASE OF 5 QUARTS!</strong></p>
-<p style="text-align:center;"><a href="https://jktillman.github.io/oilfilters.htm">Oilfilters</a>
-<p style="text-align:center;"><a href="https://jktillman.github.io/batts.htm">Batteries</a>
-<p style="text-align:center;"><a href="https://jktillman.github.io/contactus.htm">Contact us</a>
+<p style="text-align:center;"><strong>ALL ACDELCO PRODUCTS 10% OFF - THIS WEEK ONLY!</strong></p>
+<p style="text-align:center;"><strong>MOBILE 1 OIL PRODUCTS ON SALE THIS MONTH - INCLUDES A FREE FILTER WITH PURCHASE OF 5 QUARTS!</strong></p>
+</div>
 
+<div class="links">
+<a href="https://jktillman.github.io/oilfilters.htm">Oilfilters</a><br><br>
+<a href="https://jktillman.github.io/batts.htm">Batteries</a><br><br>
+<a href="https://jktillman.github.io/contactus.htm">Contact Us</a>
+</div>
+
+<div class="storeimg">
 <p style="text-align:center;"><img src="Images\autopartsstore.jpg" width = 500  alt="picture of store">
+</div>
 </p>
+
 
 </body>
 </html>
