--- a/oilfilters.htm
+++ b/oilfilters.htm
@@ -12,20 +12,26 @@
 </head>
 
 <body>
+<div class="header">
 <h1><p style="text-align:center;"><em>Tillman Auto Parts</em></h1>
-<p style="text-align:center;"><img src="Images\logo.jpg"  style="width:50px; height:50px;"  alt="picture of logo"></p>
-    
-    </h1>
+<p style="text-align:center;"><img src="Images\logo.jpg"  style="width:50px; height:50px;"  alt="picture of logo"></p></h1>
 <hr />
 <hr />
-<p style="text-align:center;"><a href="https://jktillman.github.io/">Home</a>
+</div>
 
-<h1>Oil Filters </h1>
+<div class="links">
+<a href="https://jktillman.github.io/">Home</a><br><br>
+<a href="https://jktillman.github.io/batts.htm">Batteries</a><br><br>
+<a href="https://jktillman.github.io/contactus.htm">Contact Us</a>
+</div>
+
+
+<div class="tables">
+
+<h1><p style="text-align:center;">Oil Filters </h1>
 <table>
   
-  
-  
-  <tr>
+   <tr>
 	<th>Fram Racing </th>
 	<th>Bosch</th>
 	<th>Fram Hi Mileage</th>
@@ -61,5 +67,6 @@
 		<td><img src="Images\oilf5.jpg"  width = 100  alt="picture of Purol"></td>
 		</tr>
 		</table>
+</div>		
 </body>
 </html>
