added .js , time, and verification of form

--- a/index.htm
+++ b/index.htm
@@ -20,6 +20,12 @@
 <hr />
 </div>
 
+<div class="footer">
+<h4><p style="text-align:center;">Today is:</h4>
+  <p id="date"></p>
+  <script src="myscript.js"></script>
+  </p>
+ </div>
 
 <div class="maininfo">
 <p style="text-align:center;"><strong>Welcome to the best auto parts store on the web!</strong> <br>
