added js dropdown menu

--- a/batts.htm
+++ b/batts.htm
@@ -29,9 +29,16 @@
 
 
 <div class="links">
-<a href="https://jktillman.github.io/">Home</a><br><br>
-<a href="https://jktillman.github.io/oilfilters.htm">Oilfilters</a><br><br>
-<a href="https://jktillman.github.io/contactus.htm">Contact Us</a>
+<a href="https://jktillman.github.io/">Home</a><br><br><br>
+<a href="https://jktillman.github.io/contactus.htm">Contact Us</a><br><br><br>
+
+ <div class="dropdown">
+  <button onclick="myFunction()" class="dropbtn">Shop Auto Parts</button>
+  <div id="myDropdown" class="dropdown-content">
+    <a href="https://jktillman.github.io/oilfilters.htm">Oilfilters</a>
+    <a href="https://jktillman.github.io/batts.htm">Batteries</a>
+     </div>
+</div>
 </div>
 
 <div class="tables">
