--- a/contactus.htm
+++ b/contactus.htm
@@ -71,13 +71,14 @@ First Name: <br> <input type="text" name="fname" id="a" size ="40" />
    </p>
    <br>
 	<h4 style="text-align:center;">Please tell us how we can help you</h4>
-	<p>
+	
 	
 		<p>
 		<p style="text-align:center;">
-		<textarea name="comments" rows="5" cols="40">
+		<textarea name="comments" id="d" rows="5" cols="40">
 		Type here...
 		</textarea>
+	
 	</p>
 	<p>
 		<p style="text-align:center;">
