--- a/index.htm
+++ b/index.htm
@@ -38,16 +38,24 @@ We stock all the lubricants and oil change products you will ever need.
 </div>
 
 <div class="links">
-<a href="https://jktillman.github.io/oilfilters.htm">Oilfilters</a><br><br>
-<a href="https://jktillman.github.io/batts.htm">Batteries</a><br><br>
-<a href="https://jktillman.github.io/contactus.htm">Contact Us</a>
+<a href="https://jktillman.github.io/">Home</a><br><br><br>
+<a href="https://jktillman.github.io/contactus.htm">Contact Us</a><br><br><br>
+
+ <div class="dropdown">
+  <button onclick="myFunction()" class="dropbtn">Shop Auto Parts</button>
+  <div id="myDropdown" class="dropdown-content">
+    <a href="https://jktillman.github.io/oilfilters.htm">Oilfilters</a>
+    <a href="https://jktillman.github.io/batts.htm">Batteries</a>
+     </div>
 </div>
+</div>
+
 
 <div class="storeimg">
 <p style="text-align:center;"><img src="Images\autopartsstore.jpg" width = 500  alt="picture of store">
 </div>
 </p>
-
+ <script src="myscript.js"></script>
 
 </body>
 </html>
