--- a/index.htm
+++ b/index.htm
@@ -1,37 +1,98 @@
 <!doctype html>
-
+<!-- Main Index File -->
 <html lang="en">
 <head>
   <meta charset="utf-8">
 
-  <title>Final Project</title>
- <link rel="stylesheet" href="race.css" type="text/css">
+  <title>Tillman Auto Parts</title>
+  ​<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" href="my.css" type="text/css">
+  
+</head>
 
 <body>
-
-<div class="finish"><img src="Images\finish.jpg"  width="20px" height="400px" alt="picture of finish">
+<body>
+<div class="header">
+<h1><p style="text-align:center;"><em>Tillman Auto Parts</em></h1>
+<p style="text-align:center;"><img src="Images\logo.jpg"  style="width:50px; height:50px;"  alt="picture of logo"></p></h1>
+<hr />
+<hr />
 </div>
- 
-<p>
 
-<h1><p style="text-align:center;"><em>Click the light to <br>start the race !</em></h1></p>
-<img class = "redlight" id = "redlight"  width="100px" height="100px" src="Images\redlight.jpg"
-onclick = "myMove() + myMove2()"/>
+<div class="footer">
+<h4><p style="text-align:center;">Today is:</h4>
+  <p id="date"></p>
+  <script src="myscript.js"></script>
+  </p>
+ </div>
 
-<img class = "greenlight" id = "greenlight" width="100px" height="100px" src="Images\greenlight.jpg"/>
+<div class="maininfo">
+<p style="text-align:center;"><strong>Welcome to the best auto parts store on the web!</strong> <br>
+We have everything you need to repair your vehicle. <br>
+We have every part for your car or truck! <br><br>
 
-<img class = "trophy" id = "trophy" width="200px" height="200px" src="Images\trophy2.jpg" 
- onClick="window.location.reload()">
-</p> 
-
-<div id ="container"><img src="Images\field.jpg" width="100%" height="700px" >
-<div id ="animate"><img src="Images\rabbitgr.jpg"  width="100px" height="100px"></div>
-<div id ="animate2"><img src="Images\turtlegr.jpg" width="100px" height="100px"></div>
+We stock all the lubricants and oil change products you will ever need.
+<p style="text-align:center;"><strong>ALL ACDELCO PRODUCTS 10% OFF - THIS WEEK ONLY!</strong></p><br>
 </div>
+
+<div class="products">
+<h2><p style="text-align:center;"><strong>Our Most <br>Popular Parts</strong></p></h2>
+</div>
+
+
+
+<div class="links">
+<a href="https://jktillman.github.io/">Home</a><br><br><br>
+<a href="https://jktillman.github.io/contactus.htm">Contact Us</a><br><br><br>
+<a href="https://jktillman.github.io/race.htm">Rabbit Race</a><br><br><br>
+ <div class="dropdown">
+  <button onclick="myFunction()" class="dropbtn">Shop Auto Parts</button>
+  <div id="myDropdown" class="dropdown-content">
+    <a href="https://jktillman.github.io/oilfilters.htm">Oilfilters</a>
+    <a href="https://jktillman.github.io/batts.htm">Batteries</a>
+     </div>
+</div>
+</div>
+
+ <div class="slideshow-container" style="margin:auto";>
+  <div class="mySlides fade" style="text-align:center">
+    <div class="numbertext">1 / 4</div>
+    <img src="Images\oilf1.jpg"  style="width:90%"  alt="picture of Fram Racing"> 
+    <div class="text">Fram Racing Filter</div>
+  </div>
+
+  <div class="mySlides fade" style="text-align:center">
+    <div class="numbertext">2 / 4</div>
+    <img src="Images\oilf4.jpg"  style="width:90%"    alt="picture of Fram Ultra"> 
+    <div class="text">Fram Ultra Filter</div>
+  </div>
+
+  <div class="mySlides fade" style="text-align:center">
+    <div class="numbertext">3 / 4</div>
+    <img src="Images\oilf5.jpg"   style="width:90%"  alt="picture of Puro">
+    <div class="text">Purolator Filter</div>
+  </div>
   
-<script src="race.js"></script>
+  <div class="mySlides fade" style="text-align:center">
+    <div class="numbertext">4 / 4</div>
+    <img src="Images\batt5.jpg"  style="width:90%"   alt="picture of diehard">
+    <div class="text">Diehard Battery</div>
+  </div>
+  
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+  <span class="dot" onclick="currentSlide(4)"></span>
+  </div>
+
+ <script src="myscript.js"></script>
 
 </body>
-
 </html>
-
