--- a/contactus.htm
+++ b/contactus.htm
@@ -82,8 +82,7 @@ First Name: <br> <input type="text" name="fname" id="a" size ="40" />
 	
 		<p>
 		<p style="text-align:center;">
-		<textarea name="comments" id="d" rows="5" cols="40">
-		Type here...
+		<textarea name="comments" id="d" rows="5" cols="40">This is an example page and does not function...
 		</textarea>
 	
 	</p>
