--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Tillman Auto Parts</title>
+  <title>James Tillman</title>
   ​<meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="my.css" type="text/css">
@@ -14,7 +14,7 @@
 <body>
 <body>
 <div class="header">
-<h1><p style="text-align:center;"><em>Tillman Auto Parts</em></h1>
+<h1><p style="text-align:center;"><em>James Tillman</em></h1>
 <p style="text-align:center;"><img src="Images\logo.jpg"  style="width:50px; height:50px;"  alt="picture of logo"></p></h1>
 <hr />
 <hr />
@@ -28,12 +28,12 @@
  </div>
 
 <div class="maininfo">
-<p style="text-align:center;"><strong>Welcome to the best auto parts store on the web!</strong> <br>
-We have everything you need to repair your vehicle. <br>
-We have every part for your car or truck! <br><br>
+<p style="text-align:center;"><strong>Welcome to my custom built website!</strong> <br>
+This site was built using HTML,CSS, and Javascript. <br><br>
+My RESUME link is on the left along with another website example: Rabbit Race. <br><br> The Shop Auto Parts link, is an example of tables I created, along with the example below. <br><br>
 
-We stock all the lubricants and oil change products you will ever need.
-<p style="text-align:center;"><strong>ALL ACDELCO PRODUCTS 10% OFF - THIS WEEK ONLY!</strong></p><br>
+ 
+<p style="text-align:center;"><strong>I am an aspiring technical writer, with 13 years telecommunication technician experience with AT+T, and 14 years as a biomedical electronics technician. I currently have a real estate rental business, but am looking for technical writing projects!</strong></p><br>
 </div>
 
 <div class="products">
@@ -44,8 +44,10 @@ We stock all the lubricants and oil change products you will ever need.
 
 <div class="links">
 <a href="https://jktillman.github.io/">Home</a><br><br><br>
+<a href="https://jktillman.github.io/resume.htm">Resume</a><br><br><br>
 <a href="https://jktillman.github.io/contactus.htm">Contact Us</a><br><br><br>
 <a href="https://jktillman.github.io/race.htm">Rabbit Race</a><br><br><br>
+
  <div class="dropdown">
   <button onclick="myFunction()" class="dropbtn">Shop Auto Parts</button>
   <div id="myDropdown" class="dropdown-content">
