--- a/index.htm
+++ b/index.htm
@@ -33,7 +33,7 @@ This site was built using HTML,CSS, and Javascript. <br><br>
 My RESUME link is on the left along with another website example: Rabbit Race. <br><br> The Shop Auto Parts link, is an example of tables I created, along with the example below. <br><br>
 
  
-<p style="text-align:center;"><strong>I am an aspiring technical writer, with 13 years telecommunication technician experience with AT+T, and 14 years as a biomedical electronics technician. I currently have a real estate rental business, but am looking for technical writing projects!</strong></p><br>
+<p style="text-align:center;"><strong>I am an aspiring technical writer, with 13 years telecommunication technician experience with AT+T, and 14 years as a biomedical electronics technician. I currently have a real estate rental business, but I am looking for part time work!</strong></p><br>
 </div>
 
 <div class="products">
