--- a/resume.htm
+++ b/resume.htm
@@ -23,7 +23,7 @@
 <hr />
 </div>
 <div class="maininfo">
-<p style="text-align:center;"><img src="Images\Resume2018.png"  style="top:10px; width:100%; height:100%;"  alt="picture of resume"></p></h1>
+<p style="text-align:center;"><img src="Images\resume.png"  style="top:10px; width:100%; height:100%;"  alt="picture of resume"></p></h1>
 </div>
 </body>
 </html>
